<resources>
    <string name="app_name">BikeRoute</string>
    <string name="Login">Login (email address):</string>
    <string name="password">Password:</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="routename">Route Name:</string>
    <string name="startLat">Start Latitude:</string>
    <string name="startLong">Start Longitutde:</string>
    <string name="EndLat">End Latitude:</string>
    <string name="EndLong">End Longitude:</string>
    <string name="banner_ad_unit_id">ca-app-pub-8282744980652323/8031536495</string>

</resources>
